--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1"
+    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy-navigation": "^0.3.2"
   }
 }
